# BasicsOfProgramming

./: CMakeLists.txt  README.md  main.c  vector.c  vector.h
data_structures/: CMakeLists.txt
data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
data_structures/vector/matrix/: matrix.c  matrix.h
